[package]
name = "abanos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "lib/src/lib.rs"
doc = true

[[bin]]
name = "abanos"
path = "src/main.rs"
doc = true

[dependencies]
atty = "0.2.14"
clap = { version = "4.4.18", features = ["derive"] }
logos = { version = "0.14"}
oauth2 = "4.4.2"
quote = "1.0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
simple-log = "1.6.0"
syn = "2.0.48"
tokio = { version = "1.36.0", features = ["full"] }
ureq = { version = "2.9.1", features = ["json", "charset"] }
